switched to java 8; made age field editable