@@ -11,45 +11,24 @@ buildscript {
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'org.openjfx:javafx-plugin:0.0.8'
         classpath 'no.tornado:fxlauncher-gradle-plugin:1.0.21.1'
     }
 }
 
 plugins {
     id 'application'
-    id 'org.openjfx.javafxplugin' version '0.0.8'
-    id 'org.beryx.jlink' version '2.12.0'
-}
-
-javafx {
-    version = "14"
-    modules = [ 'javafx.controls', 'javafx.fxml' ]
-}
-
-jlink {
-    launcher {
-        name = 'hellofx'
-        jvmArgs = [
-                '--module-path "C:/Program Files/Java/javafx-sdk-14.0.1/lib"',
-                '--add-modules javafx.controls',
-                '--add-opens=javafx.controls/javafx.scene.control=ALL-UNNAMED',
-                '--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED'
-        ]
-    }
-    addOptions('--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages')
 }
 
 apply plugin: "kotlin"
 apply plugin: "application"
-apply plugin: 'org.openjfx.javafxplugin'
 apply plugin: 'no.tornado.fxlauncher'
 
 fxlauncher {
     applicationVendor 'My Company'
-    applicationUrl 'http://fxldemo.tornado.no/'
-    applicationMainClass 'no.tornado.FxlDemo'
+    applicationUrl '192.168.10.20/Hospital'
+    applicationMainClass 'com.example.demo.app.MyApp'
     acceptDowngrade false
+    deployTarget 'forntoh@192.168.10.20:Hospital'
 }
 
 compileKotlin {
@@ -80,7 +59,7 @@ dependencies {
     compile group: 'org.jetbrains.exposed', name: 'exposed-core', version: '0.25.1'
     compile group: 'org.jetbrains.exposed', name: 'exposed-dao', version: '0.25.1'
     compile group: 'org.jetbrains.exposed', name: 'exposed-jdbc', version: '0.25.1'
-    compile group: 'org.jfxtras', name: 'jmetro', version: '11.6.12'
+    compile group: 'org.jfxtras', name: 'jmetro', version: '8.6.12'
     compile 'no.tornado:tornadofx-controlsfx:0.1.1'
 
     // https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc
@@ -88,6 +67,9 @@ dependencies {
 }
 
 mainClassName = "com.example.demo.app.MyApp"
+
+group 'com.example.demo'
+version '1.0'
 
 jar {
     manifest {
